2009-04-05  Ozkan Sezer <sezeroz@gmail.com>

	* d3d8types.h, d3d9types.h: Remove misspelled constants as they exist
	  correctly spelled (wine git d476313a49c1b46eeef390c79cadd72cd3eb217d).
	* ddraw.h: Better match the PSDK types, re order a few things (wine git
	  5b375aec71419a5a5bb57a42293ef348d6dc96a8).
	* dinput.h: Add missing IID_IDirectInput8 definitions (wine git
	  59c18ef56d3d33b98e319e8c0cd30c24fc363e4e).
	* dinput.h: Other bits and pieces from wine git: Add the DIPROP_KEYNAME
	  property for keyboard device (d939367ac8fc1e7c7461008c86557fd870c4fbe4),
	  add DISCL_NOWINKEY define (eb3028acc080922996b04f4e0cb36440680fe876),
	  add some defines for EnumDevicesBySemantics
	  (80c2cabab451b749efb768403d68ccddfede71d9).
	  TODO: we _must_ revisit to double check the version ifdefs again.
	* dls1.h, dls2.h, dmdls.h, dmerror.h, dmplugin.h, dmusbuff.h: Fix license
	  headers that mistakenly use GPL instead of LGPL.
	* dmusicc.h, dmusicf.h, dmusici.h, dmusics.h: Likewise.
	* dmdls.h, dmerror.h, dmplugin.h, dmusicc.h, dmusicf.h, dmusici.h, dmusics.h:
	  more long to LONG changes from wine git repository.
	* dmoreg.h: Likewise.
	* dmoreg.h: Fix the DMOGetName() prototype (wine git: 
	  d223716b7bcde8839c741d83865b95c990a8abcc).
	* dpaddr.h: Fix some typos (wine 9f3c91e41f82ba302afad386aa1be58d6dec2b23).
	* dplay.h: Add missing defs (4ab75e121426d8840b6bfb196cef45506091fd25.)
	* dplay.h: Fix the definition of DirectPlayCreate 
	  (wine git 5dc0d4d1ed2de76f21ba4f5298ba9ab251c6fd83).
	* dpnathlp.h: update prototype of DirectPlayNATHelpCreate() 
	  (wine git ab62cd360f611ea2cc806acee044a7ea25773fd8).
	* dsound.h: added missing A/W function / type definitions 
	  (wine git 375f8ba23761d75230805e86bc057ef7755cb57c).
	* dmusici.h: less diff with the wine tree, sigh....
	* dxfile.h: Fix IDirectXFileDataReference macros (wine git 
	  b939b8d3452e6ccabde236a2087046c1649343d2,
	  8597d42cf5f3fe194bd88ccb7ff922e547c44e6d).

2009-04-04  Ozkan Sezer <sezeroz@gmail.com>
